# pi-python

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTORING_COMPLETE.md  RELEASE.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: install.md
.claude/rules/: no-any-type.md
.cursor/: settings.json
.cursor/plans/: typing-any-cleanup-strong-types.md
.cursor/rules/: no-weak-any.mdc
.github/workflows/: ci.yml
docs/: engineering-skills-design.md
docs/plans/: 2025-03-08-tui-state-analysis-and-improvements.md  2026-03-13-tui-assistant-refactor-design.md  2026-03-13-tui-refactor-implementation-plan.md  2026-03-14-assistant-interactive-flow-refactor-design.md  2026-03-14-assistant-interactive-flow-refactor-plan.md  2026-03-14-configuration-refactor-design.md  2026-03-14-configuration-refactor-plan.md  2026-03-14-configuration-refactor-progress.md  2026-03-14-event-system-implementation-summary.md  2026-03-14-event-system-phase2-complete.md  2026-03-14-event-system-refactor-design.md  2026-03-14-task9-config-initializer-summary.md  2026-03-14-tui-native-design.md  2026-03-14-tui-native-plan.md  2026-03-15-basket-tui-layout-design.md  2026-03-15-basket-tui-layout-plan.md  2026-03-15-basket-tui-single-loop-design.md  2026-03-15-basket-tui-single-loop-plan.md  2026-03-15-basket-tui-ws-callback-design.md  2026-03-15-basket-tui-ws-callback-plan.md  2026-03-15-engineering-skills-design.md  2026-03-15-engineering-skills-implementation.md  2026-03-15-tui-native-openclaw-checklist.md  2026-03-15-tui-native-openclaw-ux-plan.md  2026-03-15-tui-native-refactor-design.md  2026-03-15-tui-native-refactor-plan.md  2026-03-15-tui-native-tests-design.md  2026-03-15-tui-native-tests-plan.md  2026-03-15-tui-strong-typed-data-flow-design.md  2026-03-15-tui-strong-typed-data-flow-plan.md  2026-03-16-basket-capture-design.md  2026-03-16-basket-capture-implementation.md  2026-03-19-basket-tui-conversation-scroll-design.md  2026-03-19-basket-tui-conversation-scroll.md  2026-03-19-basket-tui-openclaw-parity-design.md  2026-03-19-basket-tui-openclaw-parity-implementation.md  2026-03-20-create-skill-command-design.md  2026-03-20-create-skill-command-plan.md  2026-03-20-tui-message-banner-design.md  2026-03-20-tui-message-banner-plan.md  (+20 more)
scripts/: prepare_pypi_release.py  publish-to-pypi.sh
