[tool.poetry]
name = "basket-python"
version = "0.1.0"
description = "Python implementation of pi-mono: AI agent framework with multi-provider LLM support"
authors = ["Pi Python Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
basedpyright = "^1.38.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

# Pydantic-friendly type checker (CLI: poetry run basedpyright).
# pyrightconfig.json in this repo is honored; use the BasedPyright VS Code / Cursor
# extension so the language server matches CLI behavior.
[tool.basedpyright]
pythonVersion = "3.12"
failOnWarnings = false
extraPaths = [
    "packages/basket-agent",
    "packages/basket-ai",
    "packages/basket-gateway",
    "packages/basket-trajectory",
    "packages/basket-tui",
    "packages/basket-remote",
    "packages/basket-memory",
]

